--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
         - run:
             name: configure server
             command: |
-              ansible-playbook -i inventory playbook.yml
+              ansible-playbook -i inventory main-remote.yml
 workflows:
   myWorkflow:
     jobs:
