--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,10 @@ jobs:
         - add_ssh_keys:
             fingerprints: [9f:a4:3b:8b:36:0e:70:03:bc:49:fe:e8:cc:66:5d:80]
 
+        - name: "ignore hostkey"
+            template: 
+              export ANSIBLE_HOST_KEY_CHECKING=False
+
         - run:
             name: install independencies
             command: |
