--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
         - run:
             name: configure server
             command: |
-              ansible-playbook -i inventory ansible.cfg main-remote.yml 
+              ansible-playbook -i inventory main-remote.yml ansible.cfg
 workflows:
   myWorkflow:
     jobs:
