--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,13 @@ jobs:
             command: |
               apk add --update ansible # install dependencies needed for your ansible
 
+  configure_infrastructure:
+      docker:
+        - image: python:3.7-alpine3.11
+      steps:
+        - checkout
+        - add_ssh_keys:
+            fingerprints: [9f:a4:3b:8b:36:0e:70:03:bc:49:fe:e8:cc:66:5d:80]
         - run:
             name: configure server
             command: |
@@ -21,4 +28,4 @@ workflows:
   myWorkflow:
     jobs:
       - create_infrastructure
-  
+      - configure_infrastructure
