--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       steps:
         - checkout
         - add_ssh_keys:
-            fingerprints: [9f:a4:3b:8b:36:0e:70:03:bc:49:fe:e8:cc:66:5d:80]
+            fingerprints: ["9f:a4:3b:8b:36:0e:70:03:bc:49:fe:e8:cc:66:5d:80"]
             
         - run:
             name: install independencies
