--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ jobs:
         - run:
             name: configure server
             command: |
-              ansible-playbook -i inventory main-remote.yml 
-              
+              ansible-playbook -i inventory main-remote.yml --private-key newone.pem
+
 workflows:
   myWorkflow:
     jobs:
